changed the format of icons to svg in files

--- a/views/404.ejs
+++ b/views/404.ejs
@@ -6,7 +6,7 @@
     <title>صفحه مورد نظر یافت نشد:(</title>
     <link rel="icon" type="image/x-icon" href="/assets/icons/brand.png" />
     <link rel="stylesheet" href="/styles/global.css" />
-    <link rel="stylesheet" href="/styles/404.css">
+    <link rel="stylesheet" href="/styles/404.css" />
   </head>
   <body>
     <div class="overlay hidden"></div>
@@ -16,9 +16,9 @@
       <div class="header-overlay hidden"></div>
       <main>
         <section class="not-found">
-            <img src="/assets/images/404.avif" alt="">
-            <p>صفحه مورد نظر یافت نشد!</p>
-            <a href="/">صفحه اصلی</a>
+          <img src="/assets/images/404.avif" alt="" />
+          <p>صفحه مورد نظر یافت نشد!</p>
+          <a href="/">صفحه اصلی</a>
         </section>
       </main>
       <%- include("includes/footer") %>
