--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -15,7 +15,10 @@
   <div class="side-left">
     <div class="phone-number">
       <span class="title">شماره تلفن</span>
-      <span class="phone-number"><%= toPersianDigitsHelper(getValueByNameHelper(footerData, 'phone_number')) %></span>
+      <span class="phone-number"
+        ><%= toPersianDigitsHelper(getValueByNameHelper(footerData,
+        'phone_number')) %></span
+      >
     </div>
     <div class="sentence">
       <p>با ما همراه باشید</p>
