--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -2,7 +2,7 @@
   <div class="section-1">
     <div class="drawer-menu">
       <button id="menu-btn">
-        <img src="/assets/icons/menu.png" alt="menu icon" />
+        <img src="/assets/icons/menu.svg" alt="menu icon" />
       </button>
     </div>
     <div class="brand">
@@ -62,10 +62,10 @@
     <div class="user-actions">
       <div class="action-links">
         <a class="action-link" href="/favorites">
-          <img src="/assets/icons/heart.png" alt="" />
+          <img src="/assets/icons/heart.svg" alt="" />
         </a>
         <a class="action-link" href="/cart">
-          <img src="/assets/icons/cart.png" alt="" />
+          <img src="/assets/icons/cart.svg" alt="" />
         </a>
       </div>
       <span class="vertical-line"></span>
@@ -77,16 +77,16 @@
       <% } else { %>
         <div class="user-data">
           <button id="open-user-data-box-btn">
-            <img src="/assets/icons/person.png" alt="">
-            <img src="/assets/icons/caret.png" alt="">
+            <img src="/assets/icons/person.svg" alt="" />
+            <img src="/assets/icons/caret.svg" alt="" />
           </button>
           <div class="user-data-box">
             <div class="name">
-              <img src="/assets/icons/person.png" alt="">
+              <img src="/assets/icons/person.svg" alt="" />
               <span><%= user.first_name %></span>
             </div>
             <button id="exit-from-account-btn">
-              <img src="/assets/icons/exit.png" alt="">
+              <img src="/assets/icons/exit.svg" alt="" />
               <span>خروج</span>
             </button>
           </div>
@@ -99,19 +99,19 @@
     <div class="navbar">
       <nav>
         <a href="/">
-          <img src="/assets/icons/house.png" alt="" />
+          <img src="/assets/icons/house.svg" alt="" />
           <span>خانه</span>
         </a>
         <a href="/products">
-          <img src="/assets/icons/product.png" alt="" />
+          <img src="/assets/icons/product.svg" alt="" />
           <span>محصولات</span>
         </a>
         <a href="/support">
-          <img src="/assets/icons/support.png" alt="" />
+          <img src="/assets/icons/support.svg" alt="" />
           <span>پشتیبانی</span>
         </a>
         <a href="/about-us">
-          <img src="/assets/icons/about-us.png" alt="" />
+          <img src="/assets/icons/about-us.svg" alt="" />
           <span>درباره ما</span>
         </a>
       </nav>
