--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>سبد خرید من | وبسایت فروشگاهی</title>
-    <link rel="icon" image="x-icon" href="/assets/icons/brand.png" />
+    <link rel="icon" image="x-icon" href="/assets/icons/brand.svg" />
     <link rel="stylesheet" href="/styles/global.css" />
-    <link rel="stylesheet" href="/styles/cart.css">
-    <link rel="stylesheet" href="/libs/sweetalert2/sweetalert2.min.css">
+    <link rel="stylesheet" href="/styles/cart.css" />
+    <link rel="stylesheet" href="/libs/sweetalert2/sweetalert2.min.css" />
   </head>
   <body>
     <div class="overlay hidden"></div>
@@ -17,107 +17,122 @@
       <div class="header-overlay hidden"></div>
       <main>
         <section class="cart-section">
-            <div class="products-list">
-                <h3>سبد خرید</h3>
-                <div class="products">
-                    <div class="product">
-                        <a class="special" href="">
-                            <div class="image">
-                                <img src="/assets/images/croma.png" alt="">
-                            </div>
-                            <div class="detail">
-                                <h5>هدفون بلوتوث کروما با میکروفون (پخش تا 16 ساعت، روی گوش، مشکی)</h5>
-                                <div class="rate">
-                                    <img src="/assets/icons/star.png" alt="">
-                                    <span class="rate-number">۵</span>
-                                </div>
-                                <span class="price">۱۳,۹۶۰,۰۰۰ تومان</span>
-                                <button class="delete-product">
-                                    <img src="/assets/icons/trash.png" alt="">
-                                </button>
-                            </div>
-                        </a>
+          <div class="products-list">
+            <h3>سبد خرید</h3>
+            <div class="products">
+              <div class="product">
+                <a class="special" href="">
+                  <div class="image">
+                    <img src="/assets/images/croma.png" alt="" />
+                  </div>
+                  <div class="detail">
+                    <h5>
+                      هدفون بلوتوث کروما با میکروفون (پخش تا 16 ساعت، روی گوش،
+                      مشکی)
+                    </h5>
+                    <div class="rate">
+                      <img src="/assets/icons/star.png" alt="" />
+                      <span class="rate-number">۵</span>
                     </div>
-                    <div class="product">
-                        <a class="special" href="">
-                            <div class="image">
-                                <img src="/assets/images/croma.png" alt="">
-                            </div>
-                            <div class="detail">
-                                <h5>هدفون بلوتوث کروما با میکروفون (پخش تا 16 ساعت، روی گوش، مشکی)</h5>
-                                <div class="rate">
-                                    <img src="/assets/icons/star.png" alt="">
-                                    <span class="rate-number">۵</span>
-                                </div>
-                                <span class="price">۱۳,۹۶۰,۰۰۰ تومان</span>
-                                <button class="delete-product">
-                                    <img src="/assets/icons/trash.png" alt="">
-                                </button>
-                            </div>
-                        </a>
+                    <span class="price">۱۳,۹۶۰,۰۰۰ تومان</span>
+                    <button class="delete-product">
+                      <img src="/assets/icons/trash.svg" alt="" />
+                    </button>
+                  </div>
+                </a>
+              </div>
+              <div class="product">
+                <a class="special" href="">
+                  <div class="image">
+                    <img src="/assets/images/croma.png" alt="" />
+                  </div>
+                  <div class="detail">
+                    <h5>
+                      هدفون بلوتوث کروما با میکروفون (پخش تا 16 ساعت، روی گوش،
+                      مشکی)
+                    </h5>
+                    <div class="rate">
+                      <img src="/assets/icons/star.png" alt="" />
+                      <span class="rate-number">۵</span>
                     </div>
-                    <div class="product">
-                        <a class="special" href="">
-                            <div class="image">
-                                <img src="/assets/images/croma.png" alt="">
-                            </div>
-                            <div class="detail">
-                                <h5>هدفون بلوتوث کروما با میکروفون (پخش تا 16 ساعت، روی گوش، مشکی)</h5>
-                                <div class="rate">
-                                    <img src="/assets/icons/star.png" alt="">
-                                    <span class="rate-number">۵</span>
-                                </div>
-                                <span class="price">۱۳,۹۶۰,۰۰۰ تومان</span>
-                                <button class="delete-product">
-                                    <img src="/assets/icons/trash.png" alt="">
-                                </button>
-                            </div>
-                        </a>
+                    <span class="price">۱۳,۹۶۰,۰۰۰ تومان</span>
+                    <button class="delete-product">
+                      <img src="/assets/icons/trash.svg" alt="" />
+                    </button>
+                  </div>
+                </a>
+              </div>
+              <div class="product">
+                <a class="special" href="">
+                  <div class="image">
+                    <img src="/assets/images/croma.png" alt="" />
+                  </div>
+                  <div class="detail">
+                    <h5>
+                      هدفون بلوتوث کروما با میکروفون (پخش تا 16 ساعت، روی گوش،
+                      مشکی)
+                    </h5>
+                    <div class="rate">
+                      <img src="/assets/icons/star.png" alt="" />
+                      <span class="rate-number">۵</span>
                     </div>
-                    <div class="product">
-                        <a class="special" href="">
-                            <div class="image">
-                                <img src="/assets/images/croma.png" alt="">
-                            </div>
-                            <div class="detail">
-                                <h5>هدفون بلوتوث کروما با میکروفون (پخش تا 16 ساعت، روی گوش، مشکی)</h5>
-                                <div class="rate">
-                                    <img src="/assets/icons/star.png" alt="">
-                                    <span class="rate-number">۵</span>
-                                </div>
-                                <span class="price">۱۳,۹۶۰,۰۰۰ تومان</span>
-                                <button class="delete-product">
-                                    <img src="/assets/icons/trash.png" alt="">
-                                </button>
-                            </div>
-                        </a>
+                    <span class="price">۱۳,۹۶۰,۰۰۰ تومان</span>
+                    <button class="delete-product">
+                      <img src="/assets/icons/trash.svg" alt="" />
+                    </button>
+                  </div>
+                </a>
+              </div>
+              <div class="product">
+                <a class="special" href="">
+                  <div class="image">
+                    <img src="/assets/images/croma.png" alt="" />
+                  </div>
+                  <div class="detail">
+                    <h5>
+                      هدفون بلوتوث کروما با میکروفون (پخش تا 16 ساعت، روی گوش،
+                      مشکی)
+                    </h5>
+                    <div class="rate">
+                      <img src="/assets/icons/star.png" alt="" />
+                      <span class="rate-number">۵</span>
                     </div>
-                    <div class="product">
-                        <a class="special" href="">
-                            <div class="image">
-                                <img src="/assets/images/croma.png" alt="">
-                            </div>
-                            <div class="detail">
-                                <h5>هدفون بلوتوث کروما با میکروفون (پخش تا 16 ساعت، روی گوش، مشکی)</h5>
-                                <div class="rate">
-                                    <img src="/assets/icons/star.png" alt="">
-                                    <span class="rate-number">۵</span>
-                                </div>
-                                <span class="price">۱۳,۹۶۰,۰۰۰ تومان</span>
-                                <button class="delete-product">
-                                    <img src="/assets/icons/trash.png" alt="">
-                                </button>
-                            </div>
-                        </a>
+                    <span class="price">۱۳,۹۶۰,۰۰۰ تومان</span>
+                    <button class="delete-product">
+                      <img src="/assets/icons/trash.svg" alt="" />
+                    </button>
+                  </div>
+                </a>
+              </div>
+              <div class="product">
+                <a class="special" href="">
+                  <div class="image">
+                    <img src="/assets/images/croma.png" alt="" />
+                  </div>
+                  <div class="detail">
+                    <h5>
+                      هدفون بلوتوث کروما با میکروفون (پخش تا 16 ساعت، روی گوش،
+                      مشکی)
+                    </h5>
+                    <div class="rate">
+                      <img src="/assets/icons/star.png" alt="" />
+                      <span class="rate-number">۵</span>
                     </div>
-                </div>
+                    <span class="price">۱۳,۹۶۰,۰۰۰ تومان</span>
+                    <button class="delete-product">
+                      <img src="/assets/icons/trash.svg" alt="" />
+                    </button>
+                  </div>
+                </a>
+              </div>
             </div>
-            <div class="order-details">
-                <h5>جزییات سفارش</h5>
-                <span class="sum-of-all">جمع کل : ۶۹,۸۰۰,۰۰۰ تومان</span>
-                <span class="payable">قابل پرداخت : ۶۹,۸۰۰,۰۰۰ تومان</span>
-                <button class="place-order-btn">ثبت سفارش</button>
-            </div>
+          </div>
+          <div class="order-details">
+            <h5>جزییات سفارش</h5>
+            <span class="sum-of-all">جمع کل : ۶۹,۸۰۰,۰۰۰ تومان</span>
+            <span class="payable">قابل پرداخت : ۶۹,۸۰۰,۰۰۰ تومان</span>
+            <button class="place-order-btn">ثبت سفارش</button>
+          </div>
         </section>
       </main>
       <%- include("includes/footer") %>
