--- a/views/favorites.ejs
+++ b/views/favorites.ejs
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="fa" dir="rtl">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>علاقه مندی ها | وبسایت فروشگاهی</title>
-    <link rel="icon" image="x-icon" href="/assets/icons/brand.png">
-    <link rel="stylesheet" href="/styles/global.css">
-    <link rel="stylesheet" href="/styles/favorites.css">
-    <link rel="stylesheet" href="/libs/sweetalert2/sweetalert2.min.css">
-</head>
-<body>
+    <link rel="icon" image="x-icon" href="/assets/icons/brand.svg" />
+    <link rel="stylesheet" href="/styles/global.css" />
+    <link rel="stylesheet" href="/styles/favorites.css" />
+    <link rel="stylesheet" href="/libs/sweetalert2/sweetalert2.min.css" />
+  </head>
+  <body>
     <div class="overlay hidden"></div>
     <%- include("includes/drawer") %>
     <div class="main">
@@ -17,106 +17,121 @@
       <div class="header-overlay hidden"></div>
       <main>
         <section class="favorites-list">
-            <h1>لیست علاقه مندی ها • ۵ محصول</h1>
-            <div class="products">
-                <div class="product">
-                    <div class="product">
-                        <a class="special" href="">
-                            <div class="image">
-                                <img src="/assets/images/croma.png" alt="">
-                            </div>
-                            <div class="detail">
-                                <h5>هدفون بلوتوث کروما با میکروفون (پخش تا 16 ساعت، روی گوش، مشکی)</h5>
-                                <div class="rate">
-                                    <img src="/assets/icons/star.png" alt="">
-                                    <span class="rate-number">۵</span>
-                                </div>
-                                <span class="price">۱۳,۹۶۰,۰۰۰ تومان</span>
-                                <button class="delete-product">
-                                    <img src="/assets/icons/trash.png" alt="">
-                                </button>
-                            </div>
-                        </a>
+          <h1>لیست علاقه مندی ها • ۵ محصول</h1>
+          <div class="products">
+            <div class="product">
+              <div class="product">
+                <a class="special" href="">
+                  <div class="image">
+                    <img src="/assets/images/croma.png" alt="" />
+                  </div>
+                  <div class="detail">
+                    <h5>
+                      هدفون بلوتوث کروما با میکروفون (پخش تا 16 ساعت، روی گوش،
+                      مشکی)
+                    </h5>
+                    <div class="rate">
+                      <img src="/assets/icons/star.png" alt="" />
+                      <span class="rate-number">۵</span>
                     </div>
-                    <div class="product">
-                        <a class="special" href="">
-                            <div class="image">
-                                <img src="/assets/images/croma.png" alt="">
-                            </div>
-                            <div class="detail">
-                                <h5>هدفون بلوتوث کروما با میکروفون (پخش تا 16 ساعت، روی گوش، مشکی)</h5>
-                                <div class="rate">
-                                    <img src="/assets/icons/star.png" alt="">
-                                    <span class="rate-number">۵</span>
-                                </div>
-                                <span class="price">۱۳,۹۶۰,۰۰۰ تومان</span>
-                                <button class="delete-product">
-                                    <img src="/assets/icons/trash.png" alt="">
-                                </button>
-                            </div>
-                        </a>
+                    <span class="price">۱۳,۹۶۰,۰۰۰ تومان</span>
+                    <button class="delete-product">
+                      <img src="/assets/icons/trash.svg" alt="" />
+                    </button>
+                  </div>
+                </a>
+              </div>
+              <div class="product">
+                <a class="special" href="">
+                  <div class="image">
+                    <img src="/assets/images/croma.png" alt="" />
+                  </div>
+                  <div class="detail">
+                    <h5>
+                      هدفون بلوتوث کروما با میکروفون (پخش تا 16 ساعت، روی گوش،
+                      مشکی)
+                    </h5>
+                    <div class="rate">
+                      <img src="/assets/icons/star.png" alt="" />
+                      <span class="rate-number">۵</span>
                     </div>
-                    <div class="product">
-                        <a class="special" href="">
-                            <div class="image">
-                                <img src="/assets/images/croma.png" alt="">
-                            </div>
-                            <div class="detail">
-                                <h5>هدفون بلوتوث کروما با میکروفون (پخش تا 16 ساعت، روی گوش، مشکی)</h5>
-                                <div class="rate">
-                                    <img src="/assets/icons/star.png" alt="">
-                                    <span class="rate-number">۵</span>
-                                </div>
-                                <span class="price">۱۳,۹۶۰,۰۰۰ تومان</span>
-                                <button class="delete-product">
-                                    <img src="/assets/icons/trash.png" alt="">
-                                </button>
-                            </div>
-                        </a>
+                    <span class="price">۱۳,۹۶۰,۰۰۰ تومان</span>
+                    <button class="delete-product">
+                      <img src="/assets/icons/trash.svg" alt="" />
+                    </button>
+                  </div>
+                </a>
+              </div>
+              <div class="product">
+                <a class="special" href="">
+                  <div class="image">
+                    <img src="/assets/images/croma.png" alt="" />
+                  </div>
+                  <div class="detail">
+                    <h5>
+                      هدفون بلوتوث کروما با میکروفون (پخش تا 16 ساعت، روی گوش،
+                      مشکی)
+                    </h5>
+                    <div class="rate">
+                      <img src="/assets/icons/star.png" alt="" />
+                      <span class="rate-number">۵</span>
                     </div>
-                    <div class="product">
-                        <a class="special" href="">
-                            <div class="image">
-                                <img src="/assets/images/croma.png" alt="">
-                            </div>
-                            <div class="detail">
-                                <h5>هدفون بلوتوث کروما با میکروفون (پخش تا 16 ساعت، روی گوش، مشکی)</h5>
-                                <div class="rate">
-                                    <img src="/assets/icons/star.png" alt="">
-                                    <span class="rate-number">۵</span>
-                                </div>
-                                <span class="price">۱۳,۹۶۰,۰۰۰ تومان</span>
-                                <button class="delete-product">
-                                    <img src="/assets/icons/trash.png" alt="">
-                                </button>
-                            </div>
-                        </a>
+                    <span class="price">۱۳,۹۶۰,۰۰۰ تومان</span>
+                    <button class="delete-product">
+                      <img src="/assets/icons/trash.svg" alt="" />
+                    </button>
+                  </div>
+                </a>
+              </div>
+              <div class="product">
+                <a class="special" href="">
+                  <div class="image">
+                    <img src="/assets/images/croma.png" alt="" />
+                  </div>
+                  <div class="detail">
+                    <h5>
+                      هدفون بلوتوث کروما با میکروفون (پخش تا 16 ساعت، روی گوش،
+                      مشکی)
+                    </h5>
+                    <div class="rate">
+                      <img src="/assets/icons/star.png" alt="" />
+                      <span class="rate-number">۵</span>
                     </div>
-                    <div class="product">
-                        <a class="special" href="">
-                            <div class="image">
-                                <img src="/assets/images/croma.png" alt="">
-                            </div>
-                            <div class="detail">
-                                <h5>هدفون بلوتوث کروما با میکروفون (پخش تا 16 ساعت، روی گوش، مشکی)</h5>
-                                <div class="rate">
-                                    <img src="/assets/icons/star.png" alt="">
-                                    <span class="rate-number">۵</span>
-                                </div>
-                                <span class="price">۱۳,۹۶۰,۰۰۰ تومان</span>
-                                <button class="delete-product">
-                                    <img src="/assets/icons/trash.png" alt="">
-                                </button>
-                            </div>
-                        </a>
+                    <span class="price">۱۳,۹۶۰,۰۰۰ تومان</span>
+                    <button class="delete-product">
+                      <img src="/assets/icons/trash.svg" alt="" />
+                    </button>
+                  </div>
+                </a>
+              </div>
+              <div class="product">
+                <a class="special" href="">
+                  <div class="image">
+                    <img src="/assets/images/croma.png" alt="" />
+                  </div>
+                  <div class="detail">
+                    <h5>
+                      هدفون بلوتوث کروما با میکروفون (پخش تا 16 ساعت، روی گوش،
+                      مشکی)
+                    </h5>
+                    <div class="rate">
+                      <img src="/assets/icons/star.png" alt="" />
+                      <span class="rate-number">۵</span>
                     </div>
-                </div>
+                    <span class="price">۱۳,۹۶۰,۰۰۰ تومان</span>
+                    <button class="delete-product">
+                      <img src="/assets/icons/trash.svg" alt="" />
+                    </button>
+                  </div>
+                </a>
+              </div>
             </div>
+          </div>
         </section>
       </main>
       <%- include("includes/footer") %>
     </div>
     <script src="/libs/sweetalert2/sweetalert2.all.min.js"></script>
     <script src="/scripts/global.js"></script>
-</body>
+  </body>
 </html>
