--- a/views/products.ejs
+++ b/views/products.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>محصولات | وبسایت فروشگاهی</title>
-    <link rel="icon" type="image/x-icon" href="/assets/icons/brand.png" />
+    <link rel="icon" type="image/x-icon" href="/assets/icons/brand.svg" />
     <link rel="stylesheet" href="/styles/global.css" />
     <link rel="stylesheet" href="/libs/flexboxgrid/flexboxgrid.css" />
     <link rel="stylesheet" href="/styles/products.css">
@@ -74,13 +74,13 @@
               <div class="pagination">
                 <% if(products.pages !== 1){ %>
                    <button>
-                    <img src="/assets/icons/back.png" style="transform: rotate(180deg);" alt="">
+                    <img src="/assets/icons/back.svg" style="transform: rotate(180deg);" alt="">
                   </button>
                 <% for(let page in products.pages) { %>
                   <a class="<%= page == settings.page ? 'on' : '' %> special" href="/products?page=<%= page %>&category=<%= settings.category %>&orderBy=<%= settings.orderBy %>"><%= toPersianDigitsHelper(products.pages) %></a>
                 <% } %>
                   <button>
-                    <img src="/assets/icons/back.png" alt="">
+                    <img src="/assets/icons/back.svg" alt="">
                   </button>
                 <% } %>
               </div>
