--- a/views/register.ejs
+++ b/views/register.ejs
@@ -6,8 +6,8 @@
     <title>ثبت نام | وبسایت فروشگاهی</title>
     <link rel="icon" type="image/x-icon" href="/assets/icons/brand.png" />
     <link rel="stylesheet" href="/styles/global.css" />
-    <link rel="stylesheet" href="/libs/notyf/notyf.min.css">
-    <link rel="stylesheet" href="/styles/register.css">
+    <link rel="stylesheet" href="/libs/notyf/notyf.min.css" />
+    <link rel="stylesheet" href="/styles/register.css" />
   </head>
   <body>
     <div class="main">
@@ -25,7 +25,7 @@
         <form action="/auth/register" method="post">
           <div class="inputs">
             <div class="input">
-              <img src="/assets/icons/mail.png" alt="" />
+              <img src="/assets/icons/mail.svg" alt="" />
               <input
                 type="email"
                 name="email"
@@ -35,16 +35,13 @@
               />
             </div>
             <ul class="field-errors">
-              <% if(errors && errors.length > 0){ %>
-                <% errors.map(error => { %>
-                  <% if(error.field == "email") { %>
-                    <li><%= error.error %></li>
-                  <% } %>
-                <% }); %>
-              <% } %>
+              <% if(errors && errors.length > 0){ %> <% errors.map(error => { %>
+              <% if(error.field == "email") { %>
+              <li><%= error.error %></li>
+              <% } %> <% }); %> <% } %>
             </ul>
             <div class="input">
-              <img src="/assets/icons/name.png" alt="" />
+              <img src="/assets/icons/name.svg" alt="" />
               <input
                 type="text"
                 name="first_name"
@@ -54,16 +51,13 @@
               />
             </div>
             <ul class="field-errors">
-              <% if(errors && errors.length > 0){ %>
-                <% errors.map(error => { %>
-                  <% if(error.field == "first_name") { %>
-                    <li><%= error.error %></li>
-                  <% } %>
-                <% }); %>
-              <% } %>
+              <% if(errors && errors.length > 0){ %> <% errors.map(error => { %>
+              <% if(error.field == "first_name") { %>
+              <li><%= error.error %></li>
+              <% } %> <% }); %> <% } %>
             </ul>
             <div class="input">
-              <img src="/assets/icons/name.png" alt="" />
+              <img src="/assets/icons/name.svg" alt="" />
               <input
                 type="text"
                 name="last_name"
@@ -73,16 +67,13 @@
               />
             </div>
             <ul class="field-errors">
-              <% if(errors && errors.length > 0){ %>
-                <% errors.map(error => { %>
-                  <% if(error.field == "last_name") { %>
-                    <li><%= error.error %></li>
-                  <% } %>
-                <% }); %>
-              <% } %>
+              <% if(errors && errors.length > 0){ %> <% errors.map(error => { %>
+              <% if(error.field == "last_name") { %>
+              <li><%= error.error %></li>
+              <% } %> <% }); %> <% } %>
             </ul>
             <div class="input">
-              <img src="/assets/icons/password.png" alt="" />
+              <img src="/assets/icons/password.svg" alt="" />
               <input
                 type="password"
                 id="password"
@@ -92,20 +83,17 @@
                 placeholder="رمز عبور خود را وارد کنید..."
               />
               <button type="button" class="show-password-btn">
-                <img src="/assets/icons/eye.png" alt="">
+                <img src="/assets/icons/eye.svg" alt="" />
               </button>
             </div>
             <ul class="field-errors">
-              <% if(errors && errors.length > 0){ %>
-                <% errors.map(error => { %>
-                  <% if(error.field == "password") { %>
-                    <li><%= error.error %></li>
-                  <% } %>
-                <% }); %>
-              <% } %>
+              <% if(errors && errors.length > 0){ %> <% errors.map(error => { %>
+              <% if(error.field == "password") { %>
+              <li><%= error.error %></li>
+              <% } %> <% }); %> <% } %>
             </ul>
             <div class="input">
-              <img src="/assets/icons/password.png" alt="" />
+              <img src="/assets/icons/password.svg" alt="" />
               <input
                 type="password"
                 id="repeat-password"
@@ -115,7 +103,7 @@
                 placeholder="تکرار رمز عبور را وارد کنید..."
               />
               <button type="button" class="show-password-btn">
-                <img src="/assets/icons/eye.png" alt="">
+                <img src="/assets/icons/eye.svg" alt="" />
               </button>
             </div>
           </div>
@@ -128,8 +116,8 @@
     <script src="/libs/notyf/notyf.min.js"></script>
     <script src="/scripts/register.js"></script>
     <script>
-      if('<%= error %>') {
-        notyf.error('<%= error %>');
+      if ("<%= error %>") {
+        notyf.error("<%= error %>");
       }
     </script>
   </body>
