--- a/views/search-results.ejs
+++ b/views/search-results.ejs
@@ -6,8 +6,8 @@
     <title>وبسایت فروشگاهی</title>
     <link rel="icon" type="image/x-icon" href="/assets/icons/brand.png" />
     <link rel="stylesheet" href="/styles/global.css" />
-    <link rel="stylesheet" href="/styles/search-results.css">
-    <link rel="stylesheet" href="/libs/sweetalert2/sweetalert2.min.css">
+    <link rel="stylesheet" href="/styles/search-results.css" />
+    <link rel="stylesheet" href="/libs/sweetalert2/sweetalert2.min.css" />
   </head>
   <body>
     <div class="overlay hidden"></div>
@@ -16,31 +16,36 @@
       <%- include("includes/header") %>
       <main>
         <section class="search-results">
-          <h1>نتایج جستوجو ● <%= toPersianDigitsHelper(products ? products.length : 0) %> محصول</h1>
+          <h1>
+            نتایج جستوجو ● <%= toPersianDigitsHelper(products ? products.length
+            : 0) %> محصول
+          </h1>
           <% if(products) { %>
-            <div class="products">
-              <% products.map(product => { %>
-                <div class="product">
-                  <a class="special" href="/product/<%= product.product_code %>">
-                    <div class="image">
-                      <img src="<%= product.image %>" alt="" />
-                    </div>
-                    <div class="detail">
-                      <h5><%= product.title %></h5>
-                      <div class="rate">
-                        <img src="/assets/icons/star.png" alt="" />
-                        <span class="rate-number"><%= toPersianDigitsHelper(product.rate) %></span>
-                      </div>
-                      <span class="price"><%= product.price_fa %> تومان</span>
-                    </div>
-                  </a>
+          <div class="products">
+            <% products.map(product => { %>
+            <div class="product">
+              <a class="special" href="/product/<%= product.product_code %>">
+                <div class="image">
+                  <img src="<%= product.image %>" alt="" />
                 </div>
-              <% }); %>
+                <div class="detail">
+                  <h5><%= product.title %></h5>
+                  <div class="rate">
+                    <img src="/assets/icons/star.png" alt="" />
+                    <span class="rate-number"
+                      ><%= toPersianDigitsHelper(product.rate) %></span
+                    >
+                  </div>
+                  <span class="price"><%= product.price_fa %> تومان</span>
+                </div>
+              </a>
+            </div>
+            <% }); %>
           </div>
           <% } else { %>
-            <div style="text-align: center;">
-              <p style="font-size: 1.5em;">محصولی یافت نشد.</p>
-            </div>
+          <div style="text-align: center">
+            <p style="font-size: 1.5em">محصولی یافت نشد.</p>
+          </div>
           <% } %>
         </section>
       </main>
